--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 								<a href="https://plus.google.com/u/0/106219408943396906417/posts" target="_blank"><img src="./Rakib_files/g+2.png" height="24" width="24" <i class="fa fa-google-plus"></i></a>
 							
 							</div>
-							<p>Tecnologo en sistemas, estudiante de 9 semestre de Ingeniería de sistema de la UNAD. Amante de Django, Unity3d y el Ciclomontañismo.</p>
+							<p>Backend Developer, amante de las nuevas tenologías y el Ciclomontañismo.</p>
 						</div>
 					</div>
 				</div>
@@ -188,7 +188,7 @@
 								<a href="https://twitter.com/jeisongiraldo16" target="_blank"><img src="./Rakib_files/tt.png" height="25.5" width="25.5" <i class="fa fa-twitter"></i></a>
 								<a href="https://plus.google.com/u/0/106305135374975627321/posts" target="_blank"><img src="./Rakib_files/g+2.png" height="24" width="24" <i class="fa fa-google-plus"></i></a>
 							</div>
-							<p>Estudiante de Ingeniería de sistemas de la UNAD, Frontend developer, le encanta una buena taza de té, Html5, Css3, y Javascript.</p>
+							<p>Frontend developer, le encanta una buena taza de té, HTML5, CSS3, y Javascript.</p>
 						</div>
 					</div>
 				</div>
